# Join_To_IT_Test_Pet_Project

./: Dockerfile  Readme.md  docker-compose.yml  pyproject.toml
event_manager/: db.sqlite3
event_manager/event_manager/: settings.py  urls.py
event_manager/events/: admin.py  models.py  views.py
event_manager/events/migrations/: 0001_initial.py
event_manager/registrations/: admin.py  models.py  serializers.py  urls.py  views.py
event_manager/registrations/migrations/: 0001_initial.py
event_manager/users/: views.py
